--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "hapi": "^16.6.3"
+    "hapi": "^16.6.3",
+    "nodemon": "^1.17.2"
   }
 }
